AM_CFLAGS = \
	 -Wall \
	 -g \
	 -I/usr/include/teonet/ \
	 -I/usr/include/libtrudp/ \
	 -I$(HOME)/Projects/teonet/src \
	 -I$(HOME)/Projects/teonet/embedded/libpbl/src \
	 -I$(HOME)/Projects/teonet/embedded/libtrudp/src \
	 -I$(HOME)/Projects/teonet/embedded/teocli/libteol0


noinst_PROGRAMS = make_package
make_package_SOURCES = make_package.c

#EXTRA_DIST = make_deb.sh 
